# GigDelivery

./: .gitignore  pyproject.toml  requirements.txt
src/helpers/: exceptions.py  reference.py  utils.py  validation.py
src/models/: delivery_step.py  location.py
src/services/: delivery_manager.py
tests/: conftest.py
tests/unit/models/: conftest.py  test_location.py
