[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "GigDelivery"
description = "An app to help track deliveries on gig delivery platforms."
authors = [{ name = "Paul Schockner", email = "anthropaulogy@gmail.com" }]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "GigDelivery/_version.py"